# family

./: .gitignore  2022_12_16__Model.mwb  README.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs  user_funcs.rs  user_info.rs
client/: index.html  package.json  vite.config.js
client/src/: App.svelte  app.css
client/src/Dashboard/: DashboardPage.svelte  FileShowcase.svelte  NavBar.svelte  SideBar.svelte  side-bar.scss  style-NavBar.scss  style.scss  userData.js
client/src/Login/: Form.svelte  Login.svelte  LoginForm.svelte  LoginPage.svelte  LoginSubmit.js  SignupForm.svelte  SignupSubmit.js  Splash.svelte  form.scss  formHandler.js  style.scss
client/src/assets/: LogOutIcon.svelte  SettingsIcon.svelte  UserIcon.svelte
client/src/dataHandler/: cookieHandler.js  requestHandler.js
server/: Cargo.toml
server/data/users/: SMRio.json
server/src/: app_data.rs  date.rs  main.rs  page_funcs.rs  user_funcs.rs  user_info.rs  user_session.rs
server/src/user/: mod.rs  user_funcs.rs  user_session.rs
